# wallet-abstractions

./: .gitmodules  CMakeLists.txt  COPYING  LICENSE  README.md
include/: abstractions.hpp  algebra.hpp  bip32.hpp  bip44.hpp  derivation.hpp  hd.hpp  heap.hpp  sequence.hpp  wallet.hpp
include/abc/src/: cashaddr.h
include/abstractions/: abstractions.hpp  address.hpp  association.hpp  blockchain.hpp  bytestring.hpp  chain.hpp  claim.hpp  constant.hpp  data.hpp  database.hpp  endian.hpp  fundamental.hpp  identity.hpp  invalid.hpp  inverse.hpp  key.hpp  keybook.hpp  keypair.hpp  link.hpp  list.hpp  machine.hpp  map.hpp  observe.hpp  one_way.hpp  operation.hpp  optional.hpp  output.hpp  pattern.hpp  redeem.hpp  reduce.hpp  secp256k1.hpp  set.hpp  sha256.hpp  sha512.hpp  slice.hpp  tags.hpp  transaction.hpp  unicode.hpp  valid.hpp  value.hpp  (+2 more)
include/abstractions/account/: input.hpp  outpoint.hpp  output.hpp  transaction.hpp
include/abstractions/bitcoin/: chain.hpp  (+7 more)
include/hd/: algebra.hpp  bip32.hpp  bip44.hpp  derivation.hpp  hd.hpp  heap.hpp  sequence.hpp  wallet.hpp
include/libbitcoin/: bip32.hpp  libbitcoin.hpp  secp256k1.hpp  wallet.hpp
include/redeem/: claim.hpp  could.hpp  memory.hpp  mind.hpp  observe.hpp  redeem.hpp  redeemer.hpp  standard.hpp
include/satoshi_sv/: header.hpp  machine.hpp  sv.hpp  transaction.hpp
include/trezor/: bip32.hpp
src/: secp256k1.cpp
src/abc/: cashaddr.cpp
src/abstractions/: database.cpp  keybook.cpp  redeem.cpp  secp256k1.cpp  set.cpp  transaction.cpp  wallet.cpp
src/hd/: bip32.cpp
src/satoshi_sv/: machine.cpp  sv.cpp
src/trezor/: bip32.cpp
test/: CMakeLists.txt  testAddresses.cpp  testData.h  testLib.cpp  testPowLock.cpp  testStage1.cpp  testStage1.h  testWork.cpp
test/cosmos/: stage_1.cpp  stage_1.hpp  stage_2.cpp  stage_2.hpp  stage_3.hpp
(+177 files in other folders)
